--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,4 +1,4 @@
-:root {
+﻿п»їРїВ»С—Р С—Р’В»РЎвЂ”:root {
     --vh: 1vh;
 }
 
@@ -47,6 +47,11 @@ body {
         scroll-behavior: auto !important;
     }
 }
+
+
+
+
+
 
 
 
